# chunked-transfer-cli

./: Cargo.toml  readme.md
.github/workflows/: publish-binaries.yml  test.yml
src/: main.rs
tests/: main.rs
